# gsparser

./: .gitignore  Cargo.toml  README.md  wrangler.toml
api/: Cargo.toml  README.md
api/migrations/: 0001_drop_server_idx.sql
api/src/: handler.rs  lib.rs  log.rs
client/: README.md
db/: schema.sql
migrations/: 0000_init.sql
src/: handler.rs  lib.rs  log.rs  parser.rs  utils.rs
src/handler/: mod.rs
src/parser/: mod.rs
web/: index.html  pnpm-lock.yaml  vite.config.mts
web/src/: App.tsx  Footer.tsx  Header.tsx  NotFound.tsx  index.css  index.tsx
web/src/components/: Card.tsx  Icon.tsx  Log.tsx  MenuList.tsx  Skeleton.tsx
web/src/components/logs/: Logs.tsx  Summaries.tsx
web/src/pages/: Home.tsx  Log.tsx  Upload.tsx
web/src/services/: log.ts
