[package]
name = "gsparser-api"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

# [features]
# default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
serde_json = "1.0.96"
# console_error_panic_hook = { version = "0.1.1", optional = true }
regex = "1.8.4"
worker = { git = "https://github.com/cloudflare/workers-rs.git", branch = "main", features = ["d1"] }
serde = { version = "1.0.164", features = ["derive"] }
sha2 = "0.10.7"
chrono = "0.4.26"
time = "0.3.22"

[build-dependencies]
yarte = "0.15.7"

[profile.release]
lto = true
strip = true
codegen-units = 1
